--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
     </header>
     <main>
+
+
         <section class=" container negative_performance ">
             <div class="negative_performance_img"></div>
             <div class="negative_performance_details">
@@ -32,6 +34,8 @@
                 </ul>
             </div>
         </section>
+
+
         <section class="plans container ">
             <div class="plan_title">
                 <h1 class="container_title">My plans</h1>
@@ -61,6 +65,45 @@
             </div>
         </section>
 
+
+        <section class="challenges container">
+            <h1 class="container_title">Types of Challenges</h1>
+
+            <div class="challenges_details">
+                <div class="a_challenge">
+                    <div class="a_challenge_img">
+                        <img src="images/continuous.png" alt="">
+                    </div>                   
+                    <h2 class="a_challenge_title">Continuity</h2>
+                    <p class="paragraph">One might quickly fall behind in their plan if there is a lack of continuity, which can lead to failure.</p>
+                </div>
+                <div class="a_challenge">
+                    <div class="a_challenge_img">
+                        <img src="images/resources.png" alt="">
+                    </div> 
+                    <h2 class="a_challenge_title">Lack of Resources</h2>
+                    <p class="paragraph">Hence, gathering relevant resources to develop a certain talent is the key responsibility.</p>
+
+                </div>
+                <div class="a_challenge">
+                    <div class="a_challenge_img">
+                        <img src="images/time.png" alt="">
+                    </div> 
+                    <h2 class="a_challenge_title">Time Management</h2>
+                    <p class="paragraph">Time management is the process of planning to increase effectiveness, efficiency, and productivity.</p>
+                </div>
+                <div class="a_challenge">
+                    <div class="a_challenge_img">
+                        <img src="images/progress.png" alt="">
+                    </div> 
+                    <h2 class="a_challenge_title">Tracking Progress</h2>
+                    <p class="paragraph">Tracking progress is the process of monitoring a project's progress against the original project plan</p>
+                </div>
+            </div>
+        </section>
+
+
+
         <section class="call_now container">
             <div class="call_now_details">
                 <h1 class="container_title" >Awlays keep a positive mindset</h1>
@@ -71,6 +114,7 @@
 
     </main>
     <footer>
+
         <div class="future">
             <h1 class="container_title">Future</h1>
             <p class="paragraph">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
@@ -82,13 +126,14 @@
                 <img src="images/icons/youtube.png" alt="youtube">
             </div>
         </div>
+
+
         <div class="subscribe">
             <h2>Subscribe</h2>
             <input type="text" placeholder="Enter your email">
            
             <button class="secondary_btn">Subscribe</button>  
         </div>
-
 
     </footer>
 </body>
